2014-05-05  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Fixed pretty printing problem for annotation declarations
    (the `@` in `@interface` was omitted)
    * Added -XprettyPrint command-line flag which will cause pretty printing
    of the source files

2014-04-15  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * The ClassDecl.superclass() method now returns non-null values.  In the
    case where the method would previously return null it now returns
    unknownType() instead. The return type was also changed to TypeDecl.

2014-03-06  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Argument files expansion has been improved. Argument files are now
    expanded in-place in the argument list, they may contain comments (`#`)
    and quoted strings, and they can be escaped by a double
    at-sign (`@@file` becomes `@file`).

2014-03-03  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Made conflicting interface method declaration error more descriptive.

2014-02-27  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Fixed annotation-related bytecode generation error.

2014-02-26  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Improved method access type errors -- void type expressions
      as a method argument now has its own error message.
    * Fixed problem in this access and super access error checking
      causing incorrect error messages to be reported for this/super
      accesses in explicit constructor invocations.

2014-02-25  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Source file processing order is now determined by the command line
      argument order.

2014-02-24  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * JastAddJ now reports all semantic errors in all compilation units
    before aborting the compilation
    * Fixed definite assignment analysis problem for assignment expressions.
      Used fix suggested by Erik Hogeman.
    * Fixed definite assignment analysis problem for method accesses.
      Used fix suggested by Erik Hogeman.