@@ -282,6 +282,7 @@ aspect FrontendMain {
       options.addKeyOption("-J-Xmx128M");
       options.addKeyOption("-recover");
       options.addKeyOption("-XprettyPrint");
+      options.addKeyOption("-XdumpTree");
 
       // non-javac options
       options.addKeyOption("-profile"); // output profiling information
