@@ -4,6 +4,8 @@
     (the `@` in `@interface` was omitted)
     * Added -XprettyPrint command-line flag which will cause pretty printing
     of the source files
+    * Added -XdumpTree command-line flag which will cause dumping the abstract
+    syntax tree of the parsed source files
 
 2014-04-15  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
